Update .travis.yml, add nasa api key

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,8 @@ matrix:
         - export GRADLE_HOME=$PWD/gradle-3.5
         - export PATH=$GRADLE_HOME/bin:$PATH
         - git clone https://github.com/flutter/flutter.git
+        - apt-get install jq
+        - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
       script:
         - ./flutter/bin/flutter -v build apk
 
@@ -75,6 +77,8 @@ matrix:
         - brew install ideviceinstaller
         - brew install ios-deploy
         - git clone https://github.com/flutter/flutter.git
+        - brew install jq
+        - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
       script:
         - ./flutter/bin/flutter -v build ios --no-codesign
 
