--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,7 @@ matrix:
   # required jobs are green.
   fast_finish: true
 
-  # Building APK/IPA takes a long time; do not wait for them to finish.
-  allow_failures:
-    - env: JOB=APK
-    - env: JOB=IPA
-
   include:
-
     # Runs tests
     - env: JOB=PR
       os: linux
@@ -31,34 +25,26 @@ matrix:
     - env: JOB=APK
       os: linux
       language: android
-      licenses:
-        - 'android-sdk-preview-license-.+'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
+      jdk: oraclejdk8
       android:
         components:
         - tools
         - platform-tools
         - build-tools-28.0.3
         - android-28
-        - sys-img-armeabi-v7a-google_apis-28
-        - extra-android-m2repository
-        - extra-google-m2repository
+        - extra-google-google_play_services
         - extra-google-android-support
-      jdk: oraclejdk8
+        - extra-google-m2repository
+        - extra-android-m2repository
       sudo: false
       addons:
         apt:
           sources:
-          - ubuntu-toolchain-r-test
+          - ubuntu-toolchain
           packages:
           - libstdc++6
           - fonts-droid
       before_script:
-        - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
-        - unzip -qq gradle-3.5-bin.zip
-        - export GRADLE_HOME=$PWD/gradle-3.5
-        - export PATH=$GRADLE_HOME/bin:$PATH
         - git clone https://github.com/flutter/flutter.git
         - sudo apt-get install jq
         - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
