--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       addons:
         apt:
           sources:
-          - ubuntu-toolchain-r-test
+          - ubuntu-toolchain
           packages:
           - libstdc++6
           - fonts-droid
@@ -31,6 +31,7 @@ matrix:
         - tools
         - platform-tools
         - build-tools-28.0.3
+        - android-27
         - android-28
         - extra-google-google_play_services
         - extra-google-android-support
@@ -57,7 +58,7 @@ matrix:
       language: generic
       osx_image: xcode8.3
       before_script:
-        - pip install six
+        - pip3 install six
         - brew update
         - brew install --HEAD libimobiledevice
         - brew install ideviceinstaller
