--- a/.travis.yml
+++ b/.travis.yml
@@ -1,64 +1,62 @@
-matrix:
-  # This causes the build to complete immediately upon first failure or once
-  # required jobs are green.
-  fast_finish: true
-
+jobs:
   include:
-    # Runs tests
-    - env: JOB=PR
-      os: linux
-      language: generic
-      sudo: false
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain
-          packages:
-          - libstdc++6
-          - fonts-droid
-      before_script:
-        - git clone https://github.com/flutter/flutter.git
-      script:
-        - ./flutter/bin/flutter test
-
-    # Builds APK
-    - env: JOB=APK
-      os: linux
-      language: android
-      jdk: oraclejdk8
-      android:
-        components:
-        - tools
-        - platform-tools
-        - build-tools-28.0.3
-        - android-27
-        - android-28
-        - extra-google-google_play_services
-        - extra-google-android-support
-        - extra-google-m2repository
-        - extra-android-m2repository
-      sudo: false
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain
-          packages:
-          - libstdc++6
-          - fonts-droid
-      before_script:
+  - stage: test
+    env: JOB=PR
+    os: linux
+    language: generic
+    sudo: false
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain
+        packages:
+        - libstdc++6
+        - fonts-droid
+    before_script:
+    - git clone https://github.com/flutter/flutter.git
+    script:
+    - ./flutter/bin/flutter test
+  - stage: build
+    matrix:
+      include:
+      # Builds APK
+      - env: JOB=APK
+        os: linux
+        language: android
+        jdk: oraclejdk8
+        android:
+          components:
+          - tools
+          - platform-tools
+          - build-tools-28.0.3
+          - android-27
+          - android-28
+          - extra-google-google_play_services
+          - extra-google-android-support
+          - extra-google-m2repository
+          - extra-android-m2repository
+        sudo: false
+        addons:
+          apt:
+            sources:
+            - ubuntu-toolchain
+            packages:
+            - libstdc++6
+            - fonts-droid
+        before_script:
         - git clone https://github.com/flutter/flutter.git
         - sudo apt-get install jq
         - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
-      script:
+        script:
         - ./flutter/bin/flutter -v build apk
 
-    # Builds IPA
-    - env: JOB=IPA
-      os: osx
-      language: generic
-      osx_image: xcode8.3
-      before_script:
-        - pip3 install six
+      # Builds IPA
+      - env: JOB=IPA
+        os: osx
+        language: generic
+        osx_image: xcode10.1
+        before_script:
+        - pip2 install six
         - brew update
         - brew install --HEAD libimobiledevice
         - brew install ideviceinstaller
@@ -66,7 +64,7 @@ matrix:
         - git clone https://github.com/flutter/flutter.git
         - brew install jq
         - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
-      script:
+        script:
         - ./flutter/bin/flutter -v build ios --no-codesign
 
 cache:
