--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
     script:
     - ./flutter/bin/flutter test
   - stage: build
-    include:
+    matrix:
     - env: JOB=APK
       os: linux
       language: android
