--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
     sdk: flutter
   redux: ^3.0.0
   flutter_redux: ^0.5.3
+  kiwi: ^0.1.0
   http: ^0.12.0+1
   cupertino_icons: ^0.1.2
   youtube_player: ^0.6.0
+  shared_preferences: ^0.5.1+1
 
 dev_dependencies:
   flutter_test:
