Change video widgets to webview to support both Android and iOS and different providers i.e YouTube, Vimeo Add Explanation Screen Change structure to follow clean architecture pattern Fix apod mapper Fix date issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Astronomy Picture of the Day
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -15,9 +15,10 @@ dependencies:
   flutter_redux: ^0.5.3
   kiwi: ^0.1.0
   http: ^0.12.0+1
-  cupertino_icons: ^0.1.2
-  youtube_player: ^0.6.0
   shared_preferences: ^0.5.1+1
+  cached_network_image: ^0.6.0+1
+  webview_flutter: ^0.3.3+1
+  transparent_image: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,7 @@ flutter:
   assets:
   - assets/
   - assets/icons/
+  - assets/drawables/
   - environment.json
   fonts:
   - family: Nasa
