--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ jobs:
         - libstdc++6
         - fonts-droid
     before_script:
+    - export ANDROID_SDK_ROOT=/usr/local/android-sdk
     - git clone https://github.com/flutter/flutter.git
     - sudo apt-get install jq
     - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
