--- a/.travis.yml
+++ b/.travis.yml
@@ -43,13 +43,12 @@ jobs:
         - libstdc++6
         - fonts-droid
     before_script:
-    - export ANDROID_SDK_ROOT=/usr/local/android-sdk
-    - export ANDROID_HOME=/usr/local/android-sdk
     - git clone https://github.com/flutter/flutter.git
     - sudo apt-get install jq
     - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
     script:
     - ./flutter/bin/flutter -v build apk
+    - flutter config --android-sdk /usr/local/android-sdk
 
   - stage: build
     env: JOB=IPA
