--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,8 @@ jobs:
         - libstdc++6
         - fonts-droid
     before_script:
-    - ls /usr/local/android-sdk -l
-    - export PATH=$PATH:/usr/local/android-sdk/platform-tools
-    - export PATH=$PATH:/usr/local/android-sdk/tools
+    - echo $ANDROID_HOME
+    - ls $ANDROID_HOME
     - git clone https://github.com/flutter/flutter.git
     - sudo apt-get install jq
     - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
