--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,9 @@ jobs:
         - libstdc++6
         - fonts-droid
     before_script:
-    - echo $ANDROID_HOME
-    - ls $ANDROID_HOME
+    - export PATH=$PATH:$ANDROID_HOME/tools
+    - export PATH=$PATH:$ANDROID_HOME/platform-tools
+    - echo $PATH
     - git clone https://github.com/flutter/flutter.git
     - sudo apt-get install jq
     - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
