--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,12 @@ jobs:
         - libstdc++6
         - fonts-droid
     before_script:
-    - export PATH=$PATH:$ANDROID_HOMEtools
-    - export PATH=$PATH:$ANDROID_HOMEplatform-tools
+    - export ANDROID_HOME=/usr/local/android-sdk
+    - export PATH=$PATH:$ANDROID_HOME/tools
+    - export PATH=$PATH:$ANDROID_HOME/platform-tools
     - echo $PATH
+    - ls $ANDROID_HOME & ls $ANDROID_HOME/tools & ls $ANDROID_HOME/platform-tools
+    - $ANDROID_HOME/tools/bin/sdkmanager --version
     - git clone https://github.com/flutter/flutter.git
     - sudo apt-get install jq
     - jq -c ".nasa_api_key = \"${NASA_API_KEY}\"" environment.json > environment.json.temp && mv environment.json.temp environment.json
